# boilerplate-microservice

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  logger.py  main.py
app/api/: __init__.py  deps.py  health.py  stats.py
app/api/v1/: items.py
app/db/: base.py  session.py
app/db/models/: __init__.py  item.py
app/db/repositories/: __init__.py  item_repository.py
app/messaging/: __init__.py  consumer.py  handlers.py  producer.py
app/middleware/: __init__.py  logging_middleware.py
app/schemas/: __init__.py  item.py
app/services/: __init__.py  item_service.py
config/: config.yaml
tests/: conftest.py
tests/integration/: __init__.py  test_db.py  test_messaging.py
tests/unit/: test_health.py  test_items.py  test_stats.py
