[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.ruff]
target-version = "py311"
line-length    = 100
select         = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore         = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version     = "3.11"
strict             = true
ignore_missing_imports = true
