[metadata]
name             = microservice-boilerplate
version          = 1.0.0
description      = Production-ready Python 3.11 async microservice boilerplate
long_description = file: README.md
long_description_content_type = text/markdown
author           = Your Name
author_email     = you@example.com
license          = MIT
classifiers      =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = =.
packages    = find:
python_requires = >=3.11

install_requires =
    fastapi>=0.111.0
    uvicorn[standard]>=0.29.0
    pydantic>=2.7.0
    pydantic-settings>=2.2.1
    sqlalchemy[asyncio]>=2.0.30
    asyncpg>=0.29.0
    aiomysql>=0.2.0
    aiosqlite>=0.20.0
    aio-pika>=9.4.1
    loguru>=0.7.2
    pyyaml>=6.0.1
    httpx>=0.27.0
    python-dotenv>=1.0.1
    tenacity>=8.3.0
    prometheus-client>=0.20.0
    psutil>=5.9.8

[options.extras_require]
mssql =
    pyodbc>=5.1.0
    aioodbc>=0.5.0
oracle =
    cx_Oracle>=8.3.0
dev =
    pytest>=8.2.0
    pytest-asyncio>=0.23.7
    pytest-cov>=5.0.0
    pytest-mock>=3.14.0
    httpx>=0.27.0
    faker>=25.2.0
    factory-boy>=3.3.0
    anyio[trio]>=4.3.0
    ruff>=0.4.4
    mypy>=1.10.0
    pre-commit>=3.7.1

[options.entry_points]
console_scripts =
    microservice = app.main:run

[tool:pytest]
asyncio_mode   = auto
testpaths      = tests
addopts        = -v --tb=short --cov=app --cov-report=term-missing --cov-report=xml
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[coverage:run]
source = app
omit   = tests/*,*/__init__.py

[mypy]
python_version     = 3.11
strict             = True
ignore_missing_imports = True
